--- a/ShoppingCartNew/Views/Products/Index.cshtml
+++ b/ShoppingCartNew/Views/Products/Index.cshtml
@@ -50,7 +50,9 @@
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ProductID }) |
             @Html.ActionLink("Details", "Details", new { id=item.ProductID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ProductID })
+            @Html.ActionLink("Delete", "Delete", new { id=item.ProductID })|
+            @Html.ActionLink("Add to Cart", "AddToCart", "ShoppingCart", new { id=item.ProductID},"")
+        
         </td>
     </tr>
 }
